Fix too large floating inputs without overflow hidden

--- a/src/less/material/forms.less
+++ b/src/less/material/forms.less
@@ -60,7 +60,7 @@
         margin-bottom: 4px;
         min-height: 36px;
     }
-    
+
     // Inputs List
     .input-item, &.inputs-list {
         ul {
@@ -87,6 +87,7 @@
             .transform(scale(16/12) translateY(21px));
             color: rgba(0,0,0,0.35);
             width: auto;
+            max-width: 75%;
             ~.item-input input::-webkit-input-placeholder {
                color: transparent;
             }
