--- a/src/less/material/lists.less
+++ b/src/less/material/lists.less
@@ -89,7 +89,7 @@
         box-sizing:border-box;
         -webkit-box-flex:1;
         -ms-flex:1;
-        overflow: hidden;
+        min-width: 0;
         .flexbox();
         .justify-content(space-between);
         .align-items(center);
